Styled filter bar and fixed some basic spacing

--- a/sanctuary-react/src/assets/styling/_catalog.scss
+++ b/sanctuary-react/src/assets/styling/_catalog.scss
@@ -5,6 +5,12 @@
 //     grid-gap: 40px;
 // }
 
+.catalog {
+    position: relative;
+    padding-top: 70px;
+    top: 39px;
+}
+
 .stockxLogo {
     height: 51.67px;
     width: 100px;
