--- a/sanctuary-react/src/assets/styling/_footer.scss
+++ b/sanctuary-react/src/assets/styling/_footer.scss
@@ -1,4 +1,6 @@
 .signUp {
+    position: relative;
+    top: 39px;
     height: 560px;
     width: 100%;
     
@@ -50,6 +52,7 @@
 
 
 .bottomText {
+    position: relative;
     height: 104px;
     width: 100%;
     background: white;
